@@ -2271,7 +2271,7 @@ $sub = $offset>0;
 			//find if an event for this exception already exists.
 			$exceptionDate = $this->exception_for_event_id!=0 ? $this->start_time : false;			
 			$existing = Event::model()->findByUuid($this->uuid, 0, $calendar->id, $exceptionDate);
-			
+
 			if(!$existing){				
 			
 				//ignore acl permissions because we allow users to schedule events directly when they have access through
@@ -2343,7 +2343,7 @@ $sub = $offset>0;
 		if($this->is_organizer)
 			return false;
 		
-		return Event::model()->findSingleByAttributes(array('uuid'=>$this->uuid, 'is_organizer'=>1));
+		return Event::model()->findSingleByAttributes(array('uuid'=>$this->uuid, 'is_organizer'=>1, 'start_time' => $this->start_time));
 	}
 	
 	/**
